--- a/QuizWPF/MainWindow.xaml
+++ b/QuizWPF/MainWindow.xaml
@@ -9,13 +9,18 @@
         xmlns:viewmodel="clr-namespace:QuizWPF.ViewModel" 
         d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="920" WindowStyle="None" ResizeMode="NoResize" Background="Transparent" AllowsTransparency="True" >
+        Title="MainWindow" Height="610" Width="930" WindowStyle="None" ResizeMode="NoResize" Background="Transparent" AllowsTransparency="True">
     <Window.InputBindings>
         <KeyBinding Key="U" Modifiers="Control" Command="{Binding PlayerViewModel.UpdateButtonCommand}"/>
     </Window.InputBindings>
 
     <Border Background="WhiteSmoke"
-            CornerRadius="15">
+            CornerRadius="25"
+            Margin="5">
+        <Border.Effect>
+            <DropShadowEffect BlurRadius="5" Direction="-90"
+                              RenderingBias="Quality" ShadowDepth="0.5" />
+        </Border.Effect>
 
         <Grid>
             <Grid.RowDefinitions>
@@ -37,75 +42,83 @@
                    VerticalAlignment="Center"
                    HorizontalAlignment="Left"
                    Foreground="Black"
-                   FontSize="40" FontFamily="Courier New" Margin="25,0,0,0" />
+                   FontSize="46" FontFamily="Sitka Small" Margin="25,0,0,0" />
             <Grid Grid.Column="2" x:Name="ContentGrid" Background="Transparent"/>
 
             <Grid Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center">
                 <StackPanel HorizontalAlignment="Right">
                     <ui:Button
+                        Margin="10"
                         BorderThickness="0"
                         Appearance="Transparent"
-                        FontSize="42"
-                        Icon="{ui:SymbolIcon Symbol=ArrowExit20}" 
-                        Height="75"
-                        Width="75" 
-                        CornerRadius="0 15 0 0 "
+                        FontSize="38"
+                        Height="55"
+                        Width="55"
+                        CornerRadius="5 22 5 5" 
                         MouseOverBackground="Red"
+                        Icon="{ui:SymbolIcon Symbol=ArrowExit20}" 
                         Command="{Binding ExitButtonCommand}">
                     </ui:Button>
                 </StackPanel>
             </Grid>
 
             <Grid Grid.Row="2" Grid.Column="0">
-                <StackPanel Grid.Row="1" VerticalAlignment="Top">
+                <StackPanel Grid.Row="1" VerticalAlignment="Top" Margin=" 0 0 0 0">
                     <ui:Button
+                        ToolTip="View start screen."
+                        ToolTipService.InitialShowDelay="100"
+                        ToolTipService.Placement="Right"
+                        ToolTipService.HorizontalOffset="26.5"
+                        ToolTipService.VerticalOffset="6"
+                        Margin="10"
                         BorderThickness="0"
                         Appearance="Transparent"
-                        FontSize="42"
+                        FontSize="38"
+                        Height="55"
+                        Width="55"
+                        CornerRadius="5" 
+                        MouseOverBackground="DarkOrange"
                         Icon="{ui:SymbolIcon Symbol=Home20}" 
-                        Height="75"
-                        Width="75"
-                        CornerRadius="0" 
-                        MouseOverBackground="LightGray"
                         Command="{Binding HomeButtonCommand}">
-                        <ui:Button.Style>
-                            <Style TargetType="ui:Button">
-                                <Setter Property="Appearance" Value="Transparent" />
-                                <Style.Triggers>
-                                    <DataTrigger Binding="{Binding CurrentView}" Value="">
-                                        <Setter Property="Background" Value="LightBlue" />
-                                        <!-- Change to your desired color -->
-                                    </DataTrigger>
-                                </Style.Triggers>
-                            </Style>
-                        </ui:Button.Style>
                     </ui:Button>
 
                     <ui:Button
+                        ToolTip="Start quiz game!"
+                        ToolTipService.InitialShowDelay="100"
+                        ToolTipService.Placement="Right"
+                        ToolTipService.HorizontalOffset="26.5"
+                        ToolTipService.VerticalOffset="6"
+                        Margin="10"
                         BorderThickness="0"
                         Appearance="Transparent"
-                        FontSize="42"
+                        FontSize="38"
+                        Height="55"
+                        Width="55"
+                        CornerRadius="5" 
+                        MouseOverBackground="DarkOrange"
                         Icon="{ui:SymbolIcon Symbol=Play20}" 
-                        Height="75"
-                        Width="75"
-                        CornerRadius="0"
-                        MouseOverBackground="LightGray"
                         Command="{Binding PlayButtonCommand}"/>
 
                     <ui:Button
+                        ToolTip="Manage quiz packs."
+                        ToolTipService.InitialShowDelay="100"
+                        ToolTipService.Placement="Right"
+                        ToolTipService.HorizontalOffset="26.5"
+                        ToolTipService.VerticalOffset="6"
+                        Margin="10"
                         BorderThickness="0"
                         Appearance="Transparent"
-                        FontSize="42"
-                        Icon="{ui:SymbolIcon Symbol=Settings20}" 
-                        Height="75"
-                        Width="75"
-                        CornerRadius="0"
-                        MouseOverBackground="LightGray"/>
-
+                        FontSize="38"
+                        Height="55"
+                        Width="55"
+                        CornerRadius="5" 
+                        MouseOverBackground="DarkOrange"
+                        Icon="{ui:SymbolIcon Symbol=Box20}">
+                    </ui:Button>
                 </StackPanel>
             </Grid>
             <Grid Grid.Row="2" Grid.Column="2">
-                <Border CornerRadius="5 5 15 5" Background="LightGray" Margin="10">
+                <Border CornerRadius="5 5 22 5" Background="#202937" Margin="10">
                     <ContentControl x:Name="MainContent" Margin="10" Content="{Binding CurrentView}" />
                 </Border>
             </Grid>
