--- a/QuizWPF/View/MenuView.xaml
+++ b/QuizWPF/View/MenuView.xaml
@@ -3,29 +3,40 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:local="clr-namespace:QuizWPF.View"
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="43" d:DesignWidth="835">
     <Grid>
-        <Menu>
+        <Menu Background="Transparent" FontFamily="Sitka Text">
             <MenuItem Header="_File">
                 <MenuItem Header="_New Question Pack"
                           Icon="{fa:Icon floppyDisk}"/>
                 
                 <Separator/>
-                
+
                 <MenuItem Header="E_xit"/>
-                
-                <MenuItem Header="_Edit">
-                    <MenuItem Header="_Add Question"/>
-                    <MenuItem Header="_Remove Question"/>
-                    <MenuItem Header="Update Button"
-                              InputGestureText="Ctrl+U"
-                              Command="{Binding PlayerViewModel.UpdateButtonCommand}"/>
-                </MenuItem>
-                
             </MenuItem>
+            
+            <MenuItem Header="_Edit">
+                <MenuItem Header="_Add Question"/>
+                <MenuItem Header="_Remove Question"/>
+                <MenuItem Header="Update Button"
+                            InputGestureText="Ctrl+U"
+                            Command="{Binding PlayerViewModel.UpdateButtonCommand}"/>
+            </MenuItem>
+            
+            <MenuItem Header="_View">
+                <MenuItem Header="_Home"
+                          InputGestureText="Ctrl+H"/>
+                <MenuItem Header="_Play"
+                          InputGestureText="Ctrl+P"/>
+                <MenuItem Header="_Configuration"
+                          InputGestureText="Ctrl+C"
+                          Command="{Binding PlayerViewModel.UpdateButtonCommand}"/>
+            </MenuItem>
+                
         </Menu>
     </Grid>
 </UserControl>
