--- a/QuizWPF/MainWindow.xaml
+++ b/QuizWPF/MainWindow.xaml
@@ -6,8 +6,7 @@
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         xmlns:local="clr-namespace:QuizWPF"
         xmlns:view="clr-namespace:QuizWPF.View" 
-        xmlns:viewmodel="clr-namespace:QuizWPF.ViewModel" 
-        d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
+        xmlns:viewmodel="clr-namespace:QuizWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
         mc:Ignorable="d"
         Title="MainWindow" 
         Height="610" 
@@ -17,9 +16,7 @@
         Background="Transparent" 
         AllowsTransparency="True">
     <Window.InputBindings>
-        <KeyBinding Key="U" 
-                    Modifiers="Control" 
-                    Command="{Binding PlayerViewModel.UpdateButtonCommand}"/>
+        <KeyBinding Key="M" Command="{Binding ShowMenuCommand}"/>
     </Window.InputBindings>
 
     
@@ -35,7 +32,7 @@
 
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="75"/>
+                <RowDefinition Height="75" />
                 <RowDefinition Height="1"/>
                 <RowDefinition />
             </Grid.RowDefinitions>
@@ -56,8 +53,9 @@
                         Foreground="Black"
                         FontSize="46" FontFamily="Sitka Small" Margin="25,0,0,0" />
             <Grid Grid.Row="0" Grid.Column="2" x:Name="ContentGrid" Background="Transparent"/>
-            
-            <Border Grid.Row="0" 
+
+            <Border x:Name="FocusableMenuView"
+                    Grid.Row="0" 
                     Grid.Column="2" 
                     Background="LightGray" 
                     CornerRadius="5" 
@@ -66,83 +64,100 @@
                     VerticalAlignment="Top"
                     Visibility="Collapsed">
                 <Border.Effect>
-                    <DropShadowEffect BlurRadius="20" 
-                              Direction="-90"
-                              RenderingBias="Quality" 
-                              ShadowDepth="0.5" />
+                    <DropShadowEffect BlurRadius="10" 
+                                Direction="-90"
+                                RenderingBias="Quality" 
+                                ShadowDepth="0.5" />
                 </Border.Effect>
                 <view:MenuView/>
             </Border>
 
-                <Grid Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center">
-                    <StackPanel HorizontalAlignment="Right">
-                        <ui:Button Margin="10"
-                                    BorderThickness="0"
-                                    Appearance="Transparent"
-                                    FontSize="38"
-                                    Height="55"
-                                    Width="55"
-                                    CornerRadius="5 22 5 5" 
-                                    MouseOverBackground="Red"
-                                    Icon="{ui:SymbolIcon Symbol=ArrowExit20}" 
-                                    Command="{Binding ExitApplicationCommand}">
-                        </ui:Button>
-                    </StackPanel>
-                </Grid>
+            <Grid Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center">
+                <StackPanel HorizontalAlignment="Right">
+                    <ui:Button Margin="10"
+                                BorderThickness="0"
+                                Appearance="Transparent"
+                                FontSize="38"
+                                Height="55"
+                                Width="55"
+                                CornerRadius="5 22 5 5" 
+                                MouseOverBackground="Red"
+                                Icon="{ui:SymbolIcon Symbol=ArrowExit20}" 
+                                Command="{Binding ExitApplicationCommand}">
+                    </ui:Button>
+                </StackPanel>
+            </Grid>
 
-                <Grid Grid.Row="2" Grid.Column="0">
-                    <StackPanel Grid.Row="1" VerticalAlignment="Top">
-                        <ui:Button  ToolTip="View start screen."
-                                    ToolTipService.InitialShowDelay="100"
-                                    ToolTipService.Placement="Right"
-                                    ToolTipService.HorizontalOffset="26.5"
-                                    ToolTipService.VerticalOffset="6"
-                                    Margin="10"
-                                    BorderThickness="0"
-                                    Appearance="Transparent"
-                                    FontSize="38"
-                                    Height="55"
-                                    Width="55"
-                                    CornerRadius="5" 
-                                    MouseOverBackground="DarkOrange"
-                                    Icon="{ui:SymbolIcon Symbol=Home20}" 
-                                    Command="{Binding ShowHomeViewCommand}">
-                        </ui:Button>
+            <Grid Grid.Row="2" Grid.Column="0">
+                <StackPanel Grid.Row="1" VerticalAlignment="Top">
+                    <ui:Button  ToolTip="View start screen."
+                                ToolTipService.InitialShowDelay="100"
+                                ToolTipService.Placement="Right"
+                                ToolTipService.HorizontalOffset="26.5"
+                                ToolTipService.VerticalOffset="6"
+                                Margin="10"
+                                BorderThickness="0"
+                                Appearance="Transparent"
+                                FontSize="38"
+                                Height="55"
+                                Width="55"
+                                CornerRadius="5" 
+                                MouseOverBackground="DarkOrange"
+                                Icon="{ui:SymbolIcon Symbol=Home20}" 
+                                Command="{Binding ShowHomeViewCommand}">
+                    </ui:Button>
 
-                        <ui:Button  ToolTip="Start quiz game!"
-                                    ToolTipService.InitialShowDelay="100"
-                                    ToolTipService.Placement="Right"
-                                    ToolTipService.HorizontalOffset="26.5"
-                                    ToolTipService.VerticalOffset="6"
-                                    Margin="10"
-                                    BorderThickness="0"
-                                    Appearance="Transparent"
-                                    FontSize="38"
-                                    Height="55"
-                                    Width="55"
-                                    CornerRadius="5" 
-                                    MouseOverBackground="DarkOrange"
-                                    Icon="{ui:SymbolIcon Symbol=Play20}" 
-                                    Command="{Binding ShowPlayViewCommand}"/>
+                    <ui:Button  ToolTip="Start quiz game!"
+                                ToolTipService.InitialShowDelay="100"
+                                ToolTipService.Placement="Right"
+                                ToolTipService.HorizontalOffset="26.5"
+                                ToolTipService.VerticalOffset="6"
+                                Margin="10"
+                                BorderThickness="0"
+                                Appearance="Transparent"
+                                FontSize="38"
+                                Height="55"
+                                Width="55"
+                                CornerRadius="5" 
+                                MouseOverBackground="DarkOrange"
+                                Icon="{ui:SymbolIcon Symbol=Play20}" 
+                                Command="{Binding ShowPlayViewCommand}"/>
 
-                        <ui:Button  ToolTip="Manage quiz packs."
-                                    ToolTipService.InitialShowDelay="100"
-                                    ToolTipService.Placement="Right"
-                                    ToolTipService.HorizontalOffset="26.5"
-                                    ToolTipService.VerticalOffset="6"
-                                    Margin="10"
-                                    BorderThickness="0"
-                                    Appearance="Transparent"
-                                    FontSize="38"
-                                    Height="55"
-                                    Width="55"
-                                    CornerRadius="5" 
-                                    MouseOverBackground="DarkOrange"
-                                    Icon="{ui:SymbolIcon Symbol=Box20}"
-                                    Command="{Binding ShowConfigurationViewCommand}">
-                        </ui:Button>
-                    </StackPanel>
-                </Grid>
+                    <ui:Button  ToolTip="Manage quiz packs."
+                                ToolTipService.InitialShowDelay="100"
+                                ToolTipService.Placement="Right"
+                                ToolTipService.HorizontalOffset="26.5"
+                                ToolTipService.VerticalOffset="6"
+                                Margin="10"
+                                BorderThickness="0"
+                                Appearance="Transparent"
+                                FontSize="38"
+                                Height="55"
+                                Width="55"
+                                CornerRadius="5" 
+                                MouseOverBackground="DarkOrange"
+                                Icon="{ui:SymbolIcon Symbol=Box20}"
+                                Command="{Binding ShowConfigurationViewCommand}">
+                    </ui:Button>
+                    <ui:Button  ToolTip="Download packs."
+                                ToolTipService.InitialShowDelay="100"
+                                ToolTipService.Placement="Right"
+                                ToolTipService.HorizontalOffset="26.5"
+                                ToolTipService.VerticalOffset="6"
+                                Margin="10"
+                                BorderThickness="0"
+                                Appearance="Transparent"
+                                FontSize="38"
+                                Height="55"
+                                Width="55"
+                                CornerRadius="5"
+                                MouseOverBackground="DarkOrange"
+                                Icon="{ui:SymbolIcon Symbol=CloudArrowDown20}"
+                                Command="{Binding ShowDownloadViewCommand}">
+                    </ui:Button>
+                </StackPanel>
+            </Grid>
+            
             <Grid Grid.Row="2" Grid.Column="2">
                 <Border CornerRadius="5 5 22 5" Background="#202937" Margin="10">
                     <ContentControl x:Name="MainContent" Margin="10" Content="{Binding CurrentView}" />
