--- a/QuizWPF/View/ConfigurationView.xaml
+++ b/QuizWPF/View/ConfigurationView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:QuizWPF.View"
+             xmlns:local="clr-namespace:QuizWPF.View" xmlns:viewmodel="clr-namespace:QuizWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="515" d:DesignWidth="835">
     <Grid Background="#202937">
@@ -27,7 +27,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             
-            <ListBox ItemsSource="{Binding Questions}">
+            <ListBox ItemsSource="{Binding Packs}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel>
