--- a/QuizWPF/MainWindow.xaml
+++ b/QuizWPF/MainWindow.xaml
@@ -52,6 +52,7 @@
                         Width="55"
                         CornerRadius="20 5 5 5" 
                         MouseOverBackground="DarkOrange"
+                       PressedBackground="OrangeRed"
                         Icon="{ui:SymbolIcon Symbol=CalendarAgenda20}" 
                         Command="{Binding ShowMenuCommand}">
             </ui:Button>
@@ -91,7 +92,8 @@
                                 FontSize="38"
                                 Height="55"
                                 Width="55"
-                                CornerRadius="5 20 5 5" 
+                                CornerRadius="5 20 5 5"
+                               PressedBackground="DarkRed"
                                 MouseOverBackground="Red"
                                 Icon="{ui:SymbolIcon Symbol=ArrowExit20}" 
                                 Command="{Binding ExitApplicationCommand}">
@@ -114,6 +116,7 @@
                                 Width="55"
                                 CornerRadius="5" 
                                 MouseOverBackground="DarkOrange"
+                                PressedBackground="OrangeRed"
                                 Icon="{ui:SymbolIcon Symbol=Play20}" 
                                 Command="{Binding ShowPlayViewCommand}"/>
 
@@ -130,24 +133,9 @@
                                 Width="55"
                                 CornerRadius="5" 
                                 MouseOverBackground="DarkOrange"
+                                PressedBackground="OrangeRed"
                                 Icon="{ui:SymbolIcon Symbol=Box20}"
                                 Command="{Binding ShowConfigurationViewCommand}">
-                    </ui:Button>
-                    <ui:Button  ToolTip="Download packs."
-                                ToolTipService.InitialShowDelay="100"
-                                ToolTipService.Placement="Right"
-                                ToolTipService.HorizontalOffset="26.5"
-                                ToolTipService.VerticalOffset="6"
-                                Margin="10"
-                                BorderThickness="0"
-                                Appearance="Transparent"
-                                FontSize="38"
-                                Height="55"
-                                Width="55"
-                                CornerRadius="5"
-                                MouseOverBackground="DarkOrange"
-                                Icon="{ui:SymbolIcon Symbol=CloudArrowDown20}"
-                                Command="{Binding ShowDownloadViewCommand}">
                     </ui:Button>
                 </StackPanel>
             </Grid>
