--- a/QuizWPF/View/ConfigurationView.xaml
+++ b/QuizWPF/View/ConfigurationView.xaml
@@ -2,46 +2,58 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:QuizWPF.View" xmlns:viewmodel="clr-namespace:QuizWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+             xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
+             xmlns:local="clr-namespace:QuizWPF.View" xmlns:viewmodel="clr-namespace:QuizWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:ConfigurationViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="515" d:DesignWidth="835">
+
+    
     <Grid Background="#202937">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        
-        <StackPanel>
-            <TextBlock Text="Configuration:"
-                       VerticalAlignment="Top"
-                       HorizontalAlignment="Center"
-                       Foreground="WhiteSmoke"
-                       FontSize="25"
-                       Margin="25" FontFamily="Sitka Text" />
-        </StackPanel>
-        
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             
-            <ListBox ItemsSource="{Binding Packs}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel>
+            <StackPanel Margin="15">
+                <TextBlock Text="Select Pack:"
+                       VerticalAlignment="Top"
+                       HorizontalAlignment="Left"
+                       Foreground="WhiteSmoke"
+                       FontSize="16"
+                       Margin="5" FontFamily="Sitka Small" />
+                <ComboBox ItemsSource="{Binding Packs}" SelectedItem="{Binding SelectedPack, Mode=TwoWay}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
                             <TextBlock Text="{Binding Name}" />
-                            <TextBlock Text="{Binding Age}" />
-                        </StackPanel>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <TextBlock Text="Select Question:"
+                       VerticalAlignment="Top"
+                       HorizontalAlignment="Left"
+                       Foreground="WhiteSmoke"
+                       FontSize="16"
+                       Margin="5" FontFamily="Sitka Small" />
+                <Border Background="#bdbfc3" CornerRadius="4" >
+                    
+                <ListBox ItemsSource="{Binding SelectedPack.Questions}" SelectedItem="{Binding SelectedQuestion, Mode=TwoWay}" Margin="10" >
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel>
+                                <TextBlock Text="{Binding Query}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                </Border>
+            </StackPanel>
+            <ui:Flyout IsOpen="True">
+                <TextBlock Text="hahaha"></TextBlock>
+            </ui:Flyout>
+
         </Grid>
-        
-        
-        
-        
-        
     </Grid>
 </UserControl>
