--- a/QuizWPF/View/ConfigurationView.xaml
+++ b/QuizWPF/View/ConfigurationView.xaml
@@ -9,14 +9,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="515" d:DesignWidth="835">
 
-    
     <Grid Background="#202937">
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            
+
             <StackPanel Margin="15">
                 <TextBlock Text="Select Pack:"
                        VerticalAlignment="Top"
@@ -24,36 +23,65 @@
                        Foreground="WhiteSmoke"
                        FontSize="16"
                        Margin="5" FontFamily="Sitka Small" />
-                <ComboBox ItemsSource="{Binding Packs}" SelectedItem="{Binding SelectedPack, Mode=TwoWay}">
+                <ComboBox ItemsSource="{Binding Packs}" 
+                          SelectedItem="{Binding SelectedPack, Mode=TwoWay}" 
+                          Background="WhiteSmoke" 
+                          Margin="0 0 0 10">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Name}" />
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
+
                 <TextBlock Text="Select Question:"
                        VerticalAlignment="Top"
                        HorizontalAlignment="Left"
                        Foreground="WhiteSmoke"
                        FontSize="16"
                        Margin="5" FontFamily="Sitka Small" />
-                <Border Background="#bdbfc3" CornerRadius="4" >
-                    
-                <ListBox ItemsSource="{Binding SelectedPack.Questions}" SelectedItem="{Binding SelectedQuestion, Mode=TwoWay}" Margin="10" >
-                    <ListBox.ItemTemplate>
+
+                <ComboBox ItemsSource="{Binding SelectedPack.Questions}" 
+                          SelectedItem="{Binding SelectedQuestion, Mode=TwoWay}" 
+                          Background="WhiteSmoke" 
+                          Margin="0 0 0 10">
+                    <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel>
                                 <TextBlock Text="{Binding Query}" />
                             </StackPanel>
                         </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
-                </Border>
-            </StackPanel>
-            <ui:Flyout IsOpen="True">
-                <TextBlock Text="hahaha"></TextBlock>
-            </ui:Flyout>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
 
+                <TextBlock Text="Set Question Name:"
+                       VerticalAlignment="Top"
+                       HorizontalAlignment="Left"
+                       Foreground="WhiteSmoke"
+                       FontSize="16"
+                       Margin="5" FontFamily="Sitka Small" />
+                <ui:TextBox Text="{Binding SelectedQuestion.Query, Mode=TwoWay }" Background="WhiteSmoke" Margin="0 0 0 10"/>
+
+                <TextBlock Text="Set Correct Answer:"
+                       VerticalAlignment="Top"
+                       HorizontalAlignment="Left"
+                       Foreground="WhiteSmoke"
+                       FontSize="16"
+                       Margin="5" FontFamily="Sitka Small" />
+                <ui:TextBox Text="{Binding SelectedQuestion.CorrectAnswer, Mode=TwoWay }" Background="WhiteSmoke" Margin="0 0 0 10"/>
+                    
+
+                <TextBlock Text="Set Incorrect Answers:"
+                       VerticalAlignment="Top"
+                       HorizontalAlignment="Left"
+                       Foreground="WhiteSmoke"
+                       FontSize="16"
+                       Margin="5" FontFamily="Sitka Small" />
+                <ui:TextBox Text="{Binding SelectedQuestion.IncorrectAnswers[0], Mode=TwoWay}" Background="WhiteSmoke" Margin="0 0 0 2"/>
+                <ui:TextBox Text="{Binding SelectedQuestion.IncorrectAnswers[1], Mode=TwoWay }" Background="WhiteSmoke" Margin="0 0 0 2"/>
+                <ui:TextBox Text="{Binding SelectedQuestion.IncorrectAnswers[2], Mode=TwoWay }" Background="WhiteSmoke" Margin="0 0 0 2"/>
+
+            </StackPanel>
         </Grid>
     </Grid>
 </UserControl>
