--- a/QuizWPF/View/ConfigurationView.xaml
+++ b/QuizWPF/View/ConfigurationView.xaml
@@ -18,22 +18,30 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <StackPanel Margin="10">
+            <StackPanel Margin="10 0 10 0">
+                <TextBlock Text="Configure Question:"
+                       VerticalAlignment="Top"
+                       HorizontalAlignment="Center"
+                       Foreground="WhiteSmoke"
+                       FontSize="16"
+                       FontWeight="Bold"
+                       Margin="5" FontFamily="Sitka Small" />
+                
                 <TextBlock Text="Select Question:"
                        VerticalAlignment="Top"
                        HorizontalAlignment="Left"
                        Foreground="WhiteSmoke"
-                       FontSize="16"
+                       FontSize="14"
                        Margin="5" FontFamily="Sitka Small" />
 
-                <ComboBox ItemsSource="{Binding ActivePack.Questions, UpdateSourceTrigger=PropertyChanged}"
-                          SelectedItem="{Binding SelectedQuestion}" 
+                <ComboBox ItemsSource="{Binding ActivePack.Questions}"
+                          SelectedItem="{Binding SelectedQuestion, Mode=TwoWay}" 
                           Background="WhiteSmoke"
                           Margin="0 0 0 10">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel>
-                                <TextBlock Text="{Binding Query}" />
+                                <TextBlock Text="{Binding Query, UpdateSourceTrigger=PropertyChanged}" />
                             </StackPanel>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
@@ -43,7 +51,7 @@
                        VerticalAlignment="Top"
                        HorizontalAlignment="Left"
                        Foreground="WhiteSmoke"
-                       FontSize="16"
+                       FontSize="14"
                        Margin="5" FontFamily="Sitka Small" />
                 <ui:TextBox Text="{Binding SelectedQuestion.Query, Mode=TwoWay }" Background="WhiteSmoke" Margin="0 0 0 10"/>
 
@@ -51,7 +59,7 @@
                        VerticalAlignment="Top"
                        HorizontalAlignment="Left"
                        Foreground="WhiteSmoke"
-                       FontSize="16"
+                       FontSize="14"
                        Margin="5" FontFamily="Sitka Small" />
                 <ui:TextBox Text="{Binding SelectedQuestion.CorrectAnswer, Mode=TwoWay }" Background="WhiteSmoke" Margin="0 0 0 10"/>
 
@@ -60,7 +68,7 @@
                        VerticalAlignment="Top"
                        HorizontalAlignment="Left"
                        Foreground="WhiteSmoke"
-                       FontSize="16"
+                       FontSize="14"
                        Margin="5" FontFamily="Sitka Small" />
                 <ui:TextBox Text="{Binding SelectedQuestion.IncorrectAnswers[0], Mode=TwoWay}" Background="WhiteSmoke" Margin="0 0 0 2"/>
                 <ui:TextBox Text="{Binding SelectedQuestion.IncorrectAnswers[1], Mode=TwoWay }" Background="WhiteSmoke" Margin="0 0 0 2"/>
@@ -68,13 +76,14 @@
 
             </StackPanel>
             <Grid Grid.Column="1">
-                <StackPanel Margin=" 10">
+                <StackPanel Margin="10 0 10 0">
                     <TextBlock Text="Actions:"
                        VerticalAlignment="Top"
                        HorizontalAlignment="Center"
                        Foreground="WhiteSmoke"
                        FontSize="16"
-                       Margin="5" FontFamily="Sitka Small" />
+                       FontWeight="Bold"
+                       Margin="0 5 0 30" FontFamily="Sitka Small" />
                     
                     <ui:Button Margin="0 0 0 0"
                         Content="Add Question To Pack"
@@ -111,7 +120,7 @@
                     
                     <ui:Button Content="Import Questions To Pack"
                             HorizontalContentAlignment="Left"
-                            Margin="0 0 0 5"
+                            Margin="0 0 0 0"
                             VerticalAlignment="Top"
                             HorizontalAlignment="Center"
                             Appearance="Transparent"
@@ -127,35 +136,65 @@
 
                     <Border Height="2" Background="LightGray" Margin="10 30 10 5" />
                     
-                    <TextBlock Text="Pack Options" 
-                               HorizontalAlignment="Center"
-                               FontWeight="Bold" 
-                               Foreground="WhiteSmoke" 
-                               FontSize="16" 
-                               FontFamily="Sitka Small" 
-                               Margin="10"/>
-                    
-                    <TextBlock Text="Pack Name:" 
-                               FontWeight="Bold" 
-                               Foreground="WhiteSmoke" 
-                               Margin="10 0 10 0"/>
+                    <StackPanel Width="260">
+                        <TextBlock Text="Pack Options" 
+                                   HorizontalAlignment="Center"
+                                   FontWeight="Bold" 
+                                   Foreground="WhiteSmoke" 
+                                   FontSize="16" 
+                                   FontFamily="Sitka Small" 
+                                   Margin="10"/>
 
-                    <ui:TextBox Text="{Binding ActivePack.Name, Mode=TwoWay }" Background="WhiteSmoke" Margin="10 0 10 0"/>
+                        <TextBlock Text="Pack Name"
+                                   VerticalAlignment="Top"
+                                   HorizontalAlignment="Left"
+                                   Foreground="WhiteSmoke"
+                                   FontSize="14"
+                                   Margin="5" 
+                                   FontFamily="Sitka Small"/>
 
-                    <TextBlock Text="Difficulty:" 
-                               FontWeight="Bold" 
-                               Foreground="WhiteSmoke" 
-                               Margin="10 10 10 0"/>
+                        <ui:TextBox Text="{Binding ActivePack.Name, Mode=TwoWay }" Background="WhiteSmoke" Margin="0 0 0 10" />
+
+                        <TextBlock Text="Difficulty"
+                                   VerticalAlignment="Top"
+                                   HorizontalAlignment="Left"
+                                   Foreground="WhiteSmoke"
+                                   FontSize="14"
+                                   Margin="5" 
+                                   FontFamily="Sitka Small"/>
                     
-                    <ComboBox Margin="10 0 10 0"
-                              ItemsSource="{Binding Difficulties}" 
-                              SelectedItem="{Binding ActivePack.Difficulty}"/>
-                    
-                    <TextBlock Text="Time Limit:" 
-                               FontWeight="Bold" 
-                               Foreground="WhiteSmoke" 
-                               Margin="10 10 10 0"/>
-                    <Slider Margin="10 0 10 0"/>
+                        <ComboBox Margin="0 0 0 10"
+                                  ItemsSource="{Binding Difficulties}" 
+                                  SelectedItem="{Binding ActivePack.Difficulty}"/>
+
+                        <TextBlock Text="Time/Question (Seconds)"
+                                    VerticalAlignment="Top"
+                                    HorizontalAlignment="Left"
+                                    Foreground="WhiteSmoke"
+                                    FontSize="14"
+                                    Margin="5" 
+                                    FontFamily="Sitka Small"/>
+                        <Grid>
+                            <Slider HorizontalAlignment="Left"
+                                    VerticalAlignment="Center"
+                                    Margin="0 0 10 0"
+                                    Width="220"
+                                    Minimum="5"
+                                    Maximum="120"
+                                    TickFrequency="5"
+                                    IsSnapToTickEnabled="True"
+                                    LargeChange="10"
+                                    SmallChange="1"
+                                    Value="{Binding ActivePack.TimeLimitSeconds, Mode=TwoWay}"/>
+                            <Label HorizontalAlignment="Right" 
+                                   Content="{Binding ActivePack.TimeLimitSeconds, Mode=TwoWay}"
+                                   Foreground="WhiteSmoke"
+                                   FontFamily="Sitka Small"
+                                   BorderThickness="2"
+                                   Padding="2"
+                                   BorderBrush="WhiteSmoke"/>
+                        </Grid>
+                    </StackPanel>
                 </StackPanel>
             </Grid>
         </Grid>
